Исправил массу предупреждений и ошибок