@@ -8,6 +8,7 @@ import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.security.CodeSource;
 import java.util.Properties;
 
@@ -33,172 +34,162 @@ class StoredDataManager {
     private Integer mode2Tie;
 
     //--------------------------------
-    public void setTop(Double value){
+    void setTop(Double value){
         top = value;
         this.saveDouble("top", value);
     }
 
-    public void setLeft(Double value){
+    void setLeft(Double value){
         left = value;
         this.saveDouble("left", value);
     }
 
-    public void setHeight(Double value){
+    void setHeight(Double value){
         height = value;
         this.saveDouble("height", value);
     }
 
-    public void setMode(Integer value){
+    void setMode(Integer value){
         mode = value;
         this.saveInteger("mode", value);
     }
 
-    public void setFirstStep(Integer value){
+    void setFirstStep(Integer value){
         firstStep = value;
         this.saveInteger("firstStep", value);
     }
 
-    public void setDigitsReset(Boolean value){
+    void setDigitsReset(Boolean value){
         digitsReset = value;
         this.saveBool("digitsReset", value);
     }
 
-    public void setMode0Max(Integer value){
+    void setMode0Max(Integer value){
         mode0Max = value;
         this.saveInteger("mode0Max", value);
     }
 
-    public void setMode0Min(Integer value){
+    void setMode0Min(Integer value){
         mode0Min = value;
         this.saveInteger("mode0Min", value);
     }
 
-    public void setMode0Total(Integer value){
+    void setMode0Total(Integer value){
         mode0Total = value;
         this.saveInteger("mode0Total", value);
     }
 
-    public void setMode1Player1Win(Integer value){
+    void setMode1Player1Win(Integer value){
         mode1Player1Win = value;
         this.saveInteger("mode1Player1Win", value);
     }
 
-    public void setMode1Player2Win(Integer value){
+    void setMode1Player2Win(Integer value){
         mode1Player2Win = value;
         this.saveInteger("mode1Player2Win", value);
     }
 
-    public void setMode1Tie(Integer value){
+    void setMode1Tie(Integer value){
         mode1Tie = value;
         this.saveInteger("mode1Tie", value);
     }
 
-    public void setMode2Player1Win(Integer value){
+    void setMode2Player1Win(Integer value){
         mode2Player1Win = value;
         this.saveInteger("mode2Player1Win", value);
     }
 
-    public void setMode2Player2Win(Integer value){
+    void setMode2Player2Win(Integer value){
         mode2Player2Win = value;
         this.saveInteger("mode2Player2Win", value);
     }
 
-    public void setMode2Tie(Integer value){
+    void setMode2Tie(Integer value){
         mode2Tie = value;
         this.saveInteger("mode2Tie", value);
     }
 
     //---------------------------------
-    public Double getTop(){
+    Double getTop(){
         top = this.getDouble("top", 0.0);
         return top;
     }
 
-    public Double getLeft(){
+    Double getLeft(){
         left = this.getDouble("left", 0.0);
         return left;
     }
 
-    public Double getHeight(){
+    Double getHeight(){
         height = this.getDouble("height", 0.0);
         return height;
     }
 
-    public Integer getMode(){
+    Integer getMode(){
         mode = this.getInteger("mode", 0);
         return mode;
     }
 
-    public Integer getFirstStep(){
+    Integer getFirstStep(){
         firstStep = this.getInteger("firstStep", 0);
         return firstStep;
     }
 
-    public Boolean getDigitsReset(){
+    Boolean getDigitsReset(){
         digitsReset = this.getBool("digitsReset", false);
         return digitsReset;
     }
 
-    public Integer getMode0Max(){
+    Integer getMode0Max(){
         mode0Max = this.getInteger("mode0Max", 0);
         return mode0Max;
     }
 
-    public Integer getMode0Min(){
+    Integer getMode0Min(){
         mode0Min = this.getInteger("mode0Min", 0);
         return mode0Min;
     }
 
-    public Integer getMode0Total(){
+    Integer getMode0Total(){
         mode0Total = this.getInteger("mode0Total", 0);
         return mode0Total;
     }
 
-    public Integer getMode1Player1Win(){
+    Integer getMode1Player1Win(){
         mode1Player1Win = this.getInteger("mode1Player1Win", 0);
         return mode1Player1Win;
     }
 
-    public Integer getMode1Player2Win(){
+    Integer getMode1Player2Win(){
         mode1Player2Win = this.getInteger("mode1Player2Win", 0);
         return mode1Player2Win;
     }
 
-    public Integer getMode1Tie(){
+    Integer getMode1Tie(){
         mode1Tie = this.getInteger("mode1Tie", 0);
         return mode1Tie;
     }
 
-    public Integer getMode2Player1Win(){
+    Integer getMode2Player1Win(){
         mode2Player1Win = this.getInteger("mode2Player1Win", 0);
         return mode2Player1Win;
     }
 
-    public Integer getMode2Player2Win(){
+    Integer getMode2Player2Win(){
         mode2Player2Win = this.getInteger("mode2Player2Win", 0);
         return mode2Player2Win;
     }
 
-    public Integer getMode2Tie(){
+    Integer getMode2Tie(){
         mode2Tie = this.getInteger("mode2Tie", 0);
         return mode2Tie;
     }
 
     // =========================================================================
 
-    private Properties props = new Properties();
-    private CodeSource src;
-    private URL url = null;
-    private String decodedPath = null;
-    // имя файла настроек
-    private final String PropFileName = "bc.properties";
+    private final Properties props = new Properties();
     // файл для чтения/записи настроек
     private File propFile = null;
-    // индикатор загруженности настроек
-    private Boolean loaded = false;
-    public Boolean isLoaded(){
-        return this.loaded;
-    }
 
     private void saveInteger(String key, Integer value){
         props.setProperty(key, Integer.toString(value));
@@ -256,8 +247,8 @@ class StoredDataManager {
         return value;
     }
 
-    public Boolean isPosition(){
-        Boolean result = false;
+    Boolean isPosition(){
+        boolean result = false;
         String s = props.getProperty("top");
         Double value = null;
         if(s != null){
@@ -303,7 +294,7 @@ class StoredDataManager {
     }
 
     // запись данных
-    public void writeData(){
+    void writeData(){
         if(!propFile.exists()){
             try {
                 propFile.createNewFile();
@@ -322,34 +313,32 @@ class StoredDataManager {
         }
     }
 
-    public StoredDataManager(){
+    StoredDataManager(){
         // для получения пути к исполняемому файлу
-        src = this.getClass().getProtectionDomain().getCodeSource();
+        CodeSource src = this.getClass().getProtectionDomain().getCodeSource();
         if (src != null) {
+            URL url = null;
             try {
-                url = new URL(src.getLocation(), PropFileName);
+                // имя файла настроек
+                String propFileName = "bc.properties";
+                url = new URL(src.getLocation(), propFileName);
             } catch (MalformedURLException e) {
                 // С таким способом получения URL ошибка не должна возникать.
                 e.printStackTrace();
             }
             // URL файла
             String path = url.getPath();
-            try {
-                // декодирование URL для устранения проблемы с пробелами
-                decodedPath = URLDecoder.decode(path, "UTF-8");
-                // окончательное получение файла настроек
-                propFile = new File(decodedPath);
-            } catch (UnsupportedEncodingException e) {
-                // Не вижу причин возникновения ошибки тут.
-                e.printStackTrace();
-            }
+            // декодирование URL для устранения проблемы с пробелами
+            String decodedPath = URLDecoder.decode(path, StandardCharsets.UTF_8);
+            // окончательное получение файла настроек
+            propFile = new File(decodedPath);
         }
 
         // загрузка сохраненных настроек (если возможно)
         if (propFile.canRead()) {
             try {
                 props.load(new FileInputStream(propFile));
-                loaded = true;
+                // индикатор загруженности настроек
             } catch (IOException e) {
                 // Тут ничего не надо делать. Нет файла настроек - и ладно, 
                 //   будут значения по умолчанию.
